shesmu-server/src/test/resources/good/optional-present.shesmu
Run optional
  With {
    junk = True,
    ok = project == "hi"
  }
