shesmu-server/src/test/resources/bad/bad-action-param-type.shesmu
Run fastqc
  Group files = path By accession, donor
  With {
    memory = "bad",
    input = files
  }
